fix column layout shift on track selection

--- a/css/style.scss
+++ b/css/style.scss
@@ -769,6 +769,11 @@ i#scanAudiosFirst {
   float: left;
 }
 
+.songlist.two-column .albumwrapper li {
+  float: none;
+  break-inside: avoid;
+}
+
 .songcontainer span.number {
   position: relative;
   width: 30px;
